--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -27,12 +27,14 @@
     <ImageView
         android:id="@+id/meetmap"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="45dp"
         android:src="@drawable/meetmap"
-        app:layout_constraintTop_toBottomOf="@id/rightHand"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/rightHand"
+         />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/centerguide"
