--- a/app/src/main/res/layout/activity_main_app.xml
+++ b/app/src/main/res/layout/activity_main_app.xml
@@ -69,4 +69,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_margin="20dp"
         android:contentDescription="@string/repass" />
+    <Button
+        android:id="@+id/btntransparent"
+        android:layout_width="130dp"
+        android:layout_height="900dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        android:background="@android:color/transparent"
+        >
+
+    </Button>
     </androidx.constraintlayout.widget.ConstraintLayout>
