--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -53,12 +53,25 @@
                 android:id="@+id/create"
                 android:text="@string/create"
                 style="@style/buttonOutlinedRed"
-                android:backgroundTint="@color/button_selector"></Button>
+                android:backgroundTint="@color/button_selector">
+            </Button>
+            <TextView
+                android:id="@+id/tvother"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/or"
+                app:layout_constraintEnd_toEndOf="@id/rightguide"
+                app:layout_constraintStart_toStartOf="@id/leftguide"
+                app:layout_constraintTop_toBottomOf="@id/btncancel">
+
+            </TextView>
             <Button
                 android:id="@+id/login"
                 android:text="@string/login"
                 style="@style/buttonOutlinedRed"
-                android:backgroundTint="@color/button_selector"></Button>
+                android:backgroundTint="@color/button_selector">
+            </Button>
     </LinearLayout>
 
 
