--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/email"
-            android:theme="@style/lineET" />
+            android:theme="@style/lineET"
+            android:inputType="textMultiLine"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
