--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -51,7 +51,7 @@
         android:orientation="vertical">
             <Button
                 android:id="@+id/create"
-                android:text="@string/create"
+                android:text="@string/newaccount"
                 style="@style/buttonOutlinedRed"
                 android:backgroundTint="@color/button_selector">
             </Button>
