--- a/app/src/main/res/layout/fragment_faqs.xml
+++ b/app/src/main/res/layout/fragment_faqs.xml
@@ -1,13 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FaqsFragment">
+    tools:context=".fragments.FaqsFragment"
+    android:id="@+id/faqsfragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="@id/rightguide"
+        app:layout_constraintStart_toStartOf="@id/leftguide">
+
+        <TextView
+            android:id="@+id/pregunta1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@id/rightguide"
+            app:layout_constraintStart_toStartOf="@id/leftguide"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginVertical="65dp"
+            android:textAlignment="center"
+            android:text="1. ¿Cómo funciona la aplicación?"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray"/>
+        <TextView
+            android:id="@+id/respuesta1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta1"
+            android:text="@string/textLarge" />
+        <TextView
+            android:id="@+id/pregunta2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta1"
+            android:text="@string/textLarge" />
+
+        <TextView
+            android:id="@+id/respuesta2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta2"
+            android:text="@string/textLarge" />
+
+        <TextView
+            android:id="@+id/pregunta3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta2"
+            android:text="@string/textLarge" />
+
+        <TextView
+            android:id="@+id/respuesta3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta3"
+            android:text="@string/textLarge" />
+        <TextView
+            android:id="@+id/pregunta4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta3"
+            android:text="@string/textLarge" />
+        <TextView
+            android:id="@+id/respuesta4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta4"
+            android:text="@string/textLarge" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/leftguide"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/rightguide"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
