--- a/app/src/main/res/layout/fragment_faqs.xml
+++ b/app/src/main/res/layout/fragment_faqs.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginVertical="65dp"
             android:textAlignment="center"
-            android:text="1. ¿Cómo funciona la aplicación?"
+            android:text="@string/question1"
             android:textStyle="bold"
             android:textColor="@color/dark_gray"/>
         <TextView
@@ -33,16 +33,19 @@
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta1"
-            android:text="@string/textLarge" />
+            android:text="@string/answer1" />
         <TextView
             android:id="@+id/pregunta2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta1"
-            android:text="@string/textLarge" />
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question2"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray"/>
 
         <TextView
             android:id="@+id/respuesta2"
@@ -52,17 +55,20 @@
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta2"
-            android:text="@string/textLarge" />
+            android:text="@string/answer2" />
 
         <TextView
             android:id="@+id/pregunta3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta2"
-            android:text="@string/textLarge" />
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question3"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
 
         <TextView
             android:id="@+id/respuesta3"
@@ -72,16 +78,19 @@
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta3"
-            android:text="@string/textLarge" />
+            android:text="@string/answer3" />
         <TextView
             android:id="@+id/pregunta4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/respuesta3"
-            android:text="@string/textLarge" />
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question4"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
         <TextView
             android:id="@+id/respuesta4"
             android:layout_width="0dp"
@@ -90,7 +99,133 @@
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/pregunta4"
-            android:text="@string/textLarge" />
+            android:text="@string/answer4" />
+        <TextView
+            android:id="@+id/pregunta5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta4"
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question5"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
+        <TextView
+            android:id="@+id/respuesta5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta5"
+            android:text="@string/answer5" />
+        <TextView
+            android:id="@+id/pregunta6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta5"
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question6"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
+        <TextView
+            android:id="@+id/respuesta6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta6"
+            android:text="@string/answer6" />
+        <TextView
+            android:id="@+id/pregunta7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta6"
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question7"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
+        <TextView
+            android:id="@+id/respuesta7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta7"
+            android:text="@string/answer7" />
+        <TextView
+            android:id="@+id/pregunta8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta7"
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question8"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
+        <TextView
+            android:id="@+id/respuesta8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta8"
+            android:text="@string/answer8" />
+        <TextView
+            android:id="@+id/pregunta9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta8"
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question9"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
+        <TextView
+            android:id="@+id/respuesta9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta9"
+            android:text="@string/answer9" />
+        <TextView
+            android:id="@+id/pregunta10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/respuesta9"
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:text="@string/question10"
+            android:textStyle="bold"
+            android:textColor="@color/dark_gray" />
+        <TextView
+            android:id="@+id/respuesta10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="fill_horizontal"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintStart_toEndOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/pregunta10"
+            android:text="@string/answer10" />
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/leftguide"
             android:layout_width="match_parent"
