Include notifications fragment in mainAppActivity, string eng/esp, image work in progress for for fragments under construction

--- a/app/src/main/res/layout/fragment_conctact_us.xml
+++ b/app/src/main/res/layout/fragment_conctact_us.xml
@@ -11,13 +11,14 @@
             android:id="@+id/tvtittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="30dp"
+            android:paddingTop="60dp"
             android:fontFamily="@font/roboto"
             android:text="@string/contactus"
             android:textColor="@color/dark_gray"
             android:textStyle="bold"
+            android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="45sp"
+            android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,10 +29,10 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="80dp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
-            app:layout_constraintTop_toTopOf="@+id/tvtittle"
+            app:layout_constraintTop_toBottomOf="@+id/tvtittle"
             app:hintTextColor="@color/secondary_dark">
 
             <EditText
