--- a/app/src/main/res/layout/fragment_conctact_us.xml
+++ b/app/src/main/res/layout/fragment_conctact_us.xml
@@ -6,22 +6,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ConctactUsFragment">
 
-
         <TextView
             android:id="@+id/tvtittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="60dp"
+            android:paddingTop="64dp"
             android:fontFamily="@font/roboto"
             android:text="@string/contactus"
             android:textColor="@color/dark_gray"
             android:textStyle="bold"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="35sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:id="@+id/tvinfo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="@string/infocontactus"
+            android:textColor="@color/dark_gray"
+            android:gravity="center"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@id/rightguide"
+            app:layout_constraintStart_toStartOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/tvtittle"
             />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -29,10 +41,10 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
-            app:layout_constraintTop_toBottomOf="@+id/tvtittle"
+            app:layout_constraintTop_toBottomOf="@+id/tvinfo"
             app:hintTextColor="@color/secondary_dark">
 
             <EditText
@@ -62,9 +74,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/email"
-            android:focusable="false"
-            android:clickable="false"
-            android:cursorVisible="false"
             android:theme="@style/lineET"
             android:inputType="textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -85,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/suggestion"
                 android:inputType="textMultiLine"
+                android:maxLines="10"
                 android:theme="@style/lineET" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,7 +110,7 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <Button
-            android:id="@+id/btnsave"
+            android:id="@+id/btnsend"
             style="@style/buttonOutlinedRed"
             android:layout_width="150dp"
             android:layout_marginTop="15dp"
