--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,10 +9,10 @@
             android:id="@+id/nav_notifications"
             android:icon="@drawable/ic_notifications"
             android:title="@string/notifications" />
-        <item
+       <!-- <item
             android:id="@+id/nav_createplan"
             android:icon="@drawable/ic_createplan"
-            android:title="@string/createplan" />
+            android:title="@string/createplan" />-->
         <item
             android:id="@+id/nav_manusu"
             android:icon="@drawable/ic_manusu"
