field email login and signup show multiline and mainapp add call to other fragments:faqs, contactus

--- a/app/src/main/res/layout/content_scrolling_login.xml
+++ b/app/src/main/res/layout/content_scrolling_login.xml
@@ -43,9 +43,12 @@
             <EditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:hint="@string/email"
-                android:theme="@style/lineET" />
+                android:theme="@style/lineET"
+                android:gravity="top"
+                android:inputType="textMultiLine"
+                android:maxLines="2"/>
         </com.google.android.material.textfield.TextInputLayout>
 
 
