change size and strings

--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -18,36 +18,35 @@
             android:background="@drawable/friends"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/btnedit"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/ic_heart_event"
-            app:layout_constraintEnd_toStartOf="@id/rightguide"
-            app:layout_constraintTop_toBottomOf="@id/ivevent" />
+
         <TextView
             android:id="@+id/titulo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="50dp"
             android:text="TEATRO CON AMIGOS"
-            android:gravity="center"
-            android:textSize="30sp"
+            android:gravity="left"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/ivevent"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             />
-
+        <ImageButton
+            android:id="@+id/btnedit"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_heart_event"
+            app:layout_constraintEnd_toStartOf="@id/rightguide"
+            app:layout_constraintTop_toBottomOf="@id/titulo" />
         <TextView
             android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:gravity="center"
+            android:layout_marginTop="56dp"
+            android:gravity="start"
             android:text="Descripcion del plan......"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -57,9 +56,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:layout_marginStart="25dp"
             android:text="@string/date"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/description"
             app:layout_constraintEnd_toStartOf="@id/fecha"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -69,8 +68,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:layout_marginStart="50dp"
             android:text="Fecha del evento"
-            android:gravity="center"
+            android:gravity="start"
             android:textSize="15sp"
             app:layout_constraintTop_toBottomOf="@id/description"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
@@ -81,10 +81,11 @@
             android:id="@+id/tvhorario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginStart="25dp"
+            android:layout_marginTop="15dp"
             android:text="@string/schedule"
+            android:gravity="start"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/tvfecha"
             app:layout_constraintEnd_toStartOf="@id/horario"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -93,9 +94,10 @@
             android:id="@+id/horario"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="36dp"
             android:text="Horario del evento"
-            android:gravity="center"
+            android:gravity="start"
             android:textSize="15sp"
             app:layout_constraintTop_toBottomOf="@id/fecha"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
@@ -105,9 +107,9 @@
             android:id="@+id/tvlugar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginStart="25dp"
+            android:layout_marginTop="15dp"
             android:text="@string/place"
+            android:textStyle="bold"
             android:textSize="15sp"
             app:layout_constraintTop_toBottomOf="@id/tvhorario"
             app:layout_constraintEnd_toStartOf="@id/lugar"
@@ -118,8 +120,9 @@
             android:id="@+id/lugar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="49dp"
+            android:gravity="start"
             android:text="Lugar del evento"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
@@ -147,13 +150,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1" />
+            app:layout_constraintGuide_percent="0.06" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/rightguide"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.9" />
+            app:layout_constraintGuide_percent="0.94" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
