--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -162,7 +162,7 @@
 
         <Button
             android:id="@+id/btncancel"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             style="@style/buttonOutlinedRed"
             android:backgroundTint="@color/button_selector"
             android:layout_marginTop="15dp"
@@ -175,16 +175,14 @@
         <Button
             android:id="@+id/btnsave"
             style="@style/buttonOutlinedRed"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/button_selector"
             android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
-            app:layout_constraintTop_toBottomOf="@id/etdescription"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/btncancel" />
+            app:layout_constraintTop_toBottomOf="@id/etdescription" />
 
 
         <!--<Button
