--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -146,6 +146,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
+            android:layout_marginStart="8dp"
             android:gravity="start"
             android:paddingBottom="30dp"
             android:text="Link del evento"
