Scroll contact us and change button cancel

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -163,9 +163,8 @@
         <Button
             android:id="@+id/btncancel"
             android:layout_width="0dp"
-            style="@style/buttonOutlinedRed"
-            android:backgroundTint="@color/button_selector"
-            android:layout_marginTop="15dp"
+            style="@style/buttonOutlinedWhite"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
             android:text="@string/cancel"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -176,7 +175,7 @@
             android:id="@+id/btnsave"
             style="@style/buttonOutlinedRed"
             android:layout_width="0dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/button_selector"
             android:text="@string/save"
