--- a/app/src/main/res/layout/content_scrolling_login.xml
+++ b/app/src/main/res/layout/content_scrolling_login.xml
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="@string/other"
+            android:text="@string/other2"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/btncancel">
