text reset password correct and field email multiline

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/concert_one"
         android:text="@string/fgPass"
-        android:textSize="45sp"
+        android:textSize="50sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
         app:layout_constraintTop_toTopOf="@id/topguide"
@@ -24,7 +25,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="@id/rightguide"
         app:layout_constraintStart_toStartOf="@id/leftguide"
         app:layout_constraintTop_toBottomOf="@id/tvlogin"
@@ -34,9 +35,12 @@
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/email"
-            android:theme="@style/lineET" />
+            android:theme="@style/lineET"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:maxLines="2"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
