--- a/app/src/main/res/layout/slider_layout.xml
+++ b/app/src/main/res/layout/slider_layout.xml
@@ -12,13 +12,16 @@
         android:id="@+id/idTVtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/concert_one"
         android:padding="10dp"
         android:text="Slide 1"
         android:textAlignment="center"
         android:textColor="@color/dark_gray"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        android:fontFamily="@font/concert_one"/>
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold" />
 
 </RelativeLayout>
