--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-
+    <dimen name="text_size">10sp</dimen>
 
     <dimen name="header_left_padding">16dp</dimen>
     <dimen name="header_height">208dp</dimen>
